# adlez

./: .gitignore  CMakeLists.txt  README.md
content/: test.ase
src/: asefile.h  asefileloader.cpp  asefileloader.h  contentloader.cpp  contentloader.h  entity.cpp  entity.h  game.cpp  game.h  graphics.cpp  graphics.h  main.cpp  map.cpp  map.h  point.h  rectangle.h  size.h  sprite.cpp  sprite.h  spritebatch.cpp  spritebatch.h  testentity.cpp  testentity.h  texture.cpp  texture.h
